--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: java
+jdk:
+  - oraclejdk8
+
+after_script:
+  - echo "== CHECKSTYLE_RESULT =="; cat "target/checkstyle-result.xml"; echo "== END_CHECKSTYLE_RESULT =="
+  - echo "== PMD_RESULT =="; cat "target/pmd.xml"; echo "== END_PMD_RESULT =="
+  - echo "== FINDBUGS_RESULT =="; cat "target/findbugsXml.xml"; echo "== END_FINDBUGS_RESULT =="
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
