--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
 group 'nl.tudelft.thefirstorder'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
+    }
+}
+apply plugin: 'spring-boot'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
 apply plugin: 'findbugs'
 apply plugin: 'jacoco'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -17,17 +27,30 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.logging.log4j:log4j-api:2.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.0'
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.mockito:mockito-core:2.0.48-beta'
+    compile("org.apache.logging.log4j:log4j-api:2.0")
+    compile("org.apache.logging.log4j:log4j-core:2.0")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.thymeleaf:thymeleaf-spring4")
+    compile("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
+
+    testCompile("junit:junit:4.11")
+    testCompile("org.mockito:mockito-core:2.0.48-beta")
 }
 
 mainClassName = "nl.tudelft.thefirstorder.Main"
 
-sourceSets.main {
-    java.srcDir('src/java')
-    resources.srcDir('src/resources')
+sourceSets {
+    main {
+        java.srcDir('src/main/java')
+        resources.srcDir('src/main/resources')
+    }
+//    spring {
+//        java.srcDir('src/spring/java')
+//        resource.srcDir('src/spring/resources')
+//        compileClasspath += sourceSets.main.runtimeClasspath
+//    }
 }
 
 test {
