--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
     
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    //runtime("mysql:mysql-connector-java")
+    runtime("mysql:mysql-connector-java")
     runtime("org.hsqldb:hsqldb")
 
     testCompile("junit:junit:4.11")
