--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ repositories {
 }
 
 dependencies {
-    compile("org.apache.logging.log4j:log4j-api:2.0")
-    compile("org.apache.logging.log4j:log4j-core:2.0")
+    compile("org.apache.logging.log4j:log4j-api:2.5")
+    compile("org.apache.logging.log4j:log4j-core:2.5")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-actuator")
@@ -43,7 +43,7 @@ dependencies {
     testCompile("org.mockito:mockito-core:2.0.48-beta")
 }
 
-mainClassName = "nl.tudelft.thefirstorder.springui.Application"
+mainClassName = "nl.tudelft.thefirstorder.spring.Application"
 
 sourceSets {
     main {
