Frontend working test example with ReactJs.
Uses webpack with babel to transpile jsx to js. Install webpack with
gradle frontend:installWebpack. Install React with gradle
frontend:installReact. Compile with gradle frontend:webpack.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -70,6 +70,10 @@ idea {
     }
 }
 
+bootRun {
+    addResources = true
+}
+
 checkstyle {
     toolVersion = '6.17'
     sourceSets = [sourceSets.main]
