--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,5 @@
 spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show.sql=true
+#spring.devtools.restart.trigger-file=triggerfile.txt
 #server.servlet-path=/api
