--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,3 +1,38 @@
 plugins {
-    id 'net.eikehirsch.react' version '0.3.1'
+    id "com.moowork.node" version "0.12"
+}
+
+node {
+    // Version of node to use.
+    version = '5.11.0'
+
+    // Version of npm to use.
+    npmVersion = '3.8.8'
+
+    // Base URL for fetching node distributions (change if you have a mirror).
+    distBaseUrl = 'https://nodejs.org/dist'
+
+    // If true, it will download node using above parameters.
+    // If false, it will try to use globally installed node.
+    download = true
+
+    // Set the work directory for unpacking node
+    workDir = file("${project.buildDir}/nodejs")
+
+    // Set the work directory where node_modules should be located
+    nodeModulesDir = file("${project.projectDir}")
+}
+
+task installWebpack(type: NpmTask) {
+    description 'Installs Webpack with babel using Npm.'
+    args = ['install', '--save-dev', 'babel', 'babel-preset-es2015', 'babel-preset-react', 'webpack', 'babel-loader', 'css-loader', 'file-loader', 'less', 'less-loader', "style-loader", 'url-loader']
+}
+
+task installReact(type: NpmTask) {
+    description 'Installs React using Npm.'
+    args = ['install', '--save', 'react', 'react-dom']
+}
+
+task webpack(type: NodeTask, dependsOn: 'npmInstall') {
+    script = project.file('node_modules/.bin/webpack')
 }
