--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,7 @@
 #H2 Server Properties
-0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/thefirstorder|thefirstorder
+#Sun May 01 13:41:36 CEST 2016
+0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:jhipster|thefirstorder
+1=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/thefirstorder|thefirstorder
 webAllowOthers=true
 webPort=8082
 webSSL=false
