--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,34 @@
-# language: node_js
-# node_js:
-#   - "0.12"
-# sudo: false
-# before_install: npm install -g gulp
-# install: npm install
-# before_script: gulp build
-# notifications:
-#   webhooks:
-#     on_success: change  # options: [always|never|change] default: always
-#     on_failure: always  # options: [always|never|change] default: always
-#     on_start: false     # default: false
-
-language: java
+language: node_js
+node_js:
+  - "4"
 jdk:
   - oraclejdk8
+sudo: false
+before_install: 
+- npm install -g gulp
+- npm install -g bower
+install: 
+- npm install
+- ./gradlew assemble
+before_script: 
+- gulp build
+- ./gradlew build 
+script: 
+- gulp test
+- ./gradlew check
+notifications:
+  webhooks:
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 
-after_script:
-  - echo "== CHECKSTYLE_RESULT =="; cat "target/checkstyle-result.xml"; echo "== END_CHECKSTYLE_RESULT =="
-  - echo "== PMD_RESULT =="; cat "target/pmd.xml"; echo "== END_PMD_RESULT =="
-  - echo "== FINDBUGS_RESULT =="; cat "target/findbugsXml.xml"; echo "== END_FINDBUGS_RESULT =="
-# uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+# language: java
+# jdk:
+#   - oraclejdk8
+
+# after_script:
+#   - echo "== CHECKSTYLE_RESULT =="; cat "target/checkstyle-result.xml"; echo "== END_CHECKSTYLE_RESULT =="
+#   - echo "== PMD_RESULT =="; cat "target/pmd.xml"; echo "== END_PMD_RESULT =="
+#   - echo "== FINDBUGS_RESULT =="; cat "target/findbugsXml.xml"; echo "== END_FINDBUGS_RESULT =="
+# # uncomment this line if your project needs to run something other than `rake`:
+# # script: bundle exec rspec spec
