--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: false
 
 env: 
   - NODE_VERSION=4.4.3
+cache: 
+    directories: 
+    - $HOME/.gradle/caches/
+    - node_modules
 before_install: 
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
