--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ language: java
 jdk:
   - oraclejdk8
 sudo: false
-
-
-env: 
-  - NODE_VERSION=4.4.3
 cache: 
+    apt: true
     directories: 
     - $HOME/.gradle/caches/
     - node_modules
+
+env: 
+  - NODE_VERSION=4.4.3
 before_install: 
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
