Add custom pmd rule to exclude UselessParentheses check.
This check conflicts with a checkstyle rule. If statements should always
be wrapped in parentheses.

--- a/build.gradle
+++ b/build.gradle
@@ -262,8 +262,11 @@ checkstyle {
 }
 
 pmd {
+    toolVersion = '5.4.1'
     ignoreFailures = true
     sourceSets = [sourceSets.main]
+    ruleSets = []
+    ruleSetFiles = files('config/pmd/parentheses.xml')
     reportsDir = rootProject.file("build/reports/pmd/")
 }
 
