--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "swagger-ui": "2.1.4",
     "arrive": "2.3.0",
     "bootstrap-material-design": "0.5.6",
-    "fabric.js": "fabric#^1.6.1"
+    "fabric.js": "fabric#^1.6.1",
+    "vis": "4.16.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.2"
