Update build.gradle to enable xml report in FindBugs
This disables html reports in FindBugs, but enables xml report. This is needed to Travis can print it. That way, you don't have to checkout this branch and run the test yourself. Xml and html can't be enabled at the same time.

--- a/build.gradle
+++ b/build.gradle
@@ -310,8 +310,8 @@ jacocoTestReport {
 
 tasks.withType(FindBugs) {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
         html.destination rootProject.file("build/reports/findbugs/findbugs.html")
     }
 }
