--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,6 +19,7 @@ spring:
             enabled: false # we use gulp + BrowserSync for livereload
     datasource:
         url: jdbc:h2:file:./target/h2db/db/thefirstorder;DB_CLOSE_DELAY=-1
+#        url: jdbc:h2:mem:thefirstorder;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
         name:
         username: thefirstorder
         password:
