--- a/.jhipster/Project.json
+++ b/.jhipster/Project.json
@@ -27,6 +27,12 @@
             "otherEntityName": "camera",
             "relationshipType": "one-to-many",
             "otherEntityRelationshipName": "project"
+        },
+        {
+            "relationshipName": "cue",
+            "otherEntityName": "cue",
+            "relationshipType": "one-to-many",
+            "otherEntityRelationshipName": "project"
         }
     ],
     "fields": [
