--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ jdk:
   - oraclejdk8
 sudo: false
 
+branches: 
+    only: 
+    - dev
+    - stable
+    - /^fix.*$/
+
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
