--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "arrive": "2.3.0",
     "fabric.js": "fabric#^1.6.1",
     "angular-file-saver": "^1.1.1",
-    "vis": "4.16.1"
+    "vis": "4.16.1",
+    "angular-animate": "^1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "1.5.2"
