--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,7 @@
     "fabric.js": "fabric#^1.6.1",
     "angular-file-saver": "^1.1.1",
     "vis": "4.16.1",
-    "angular-animate": "^1.5.5",
-    "angular-timeline": "^1.6.2"
+    "angular-animate": "^1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "1.5.2"
