--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -74,5 +74,5 @@ jhipster:
 
 # MULTIPART (MultipartProperties)
 multipart:
-    max-file-size: 25Mb # Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
-    max-request-size: 50Mb # Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+    max-file-size: 25MB # Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+    max-request-size: 50MB # Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
